--- a/static/css/events.css
+++ b/static/css/events.css
@@ -201,7 +201,7 @@ hr {
 }
 
 .entry {
-    background: url('https://img.freepik.com/free-photo/abstract-smoke-wallpaper-background-desktop_53876-133383.jpg?w=996&t=st=1671134915~exp=1671135515~hmac=26f3db27da9aefd1b4b94c32627033672e6441db3668afee5c543aeef1479571')no-repeat center center/cover;
+    background: url('/images/bg.jpg')no-repeat center center/cover;
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
