--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,6 +1,7 @@
 .cont {
     min-height: 65.2vh;
-    width: 100%;
+    width: 85%;
+    margin: auto;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -79,6 +80,7 @@ h2 {
     width: 100%;
     height: 250px;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .imageon:hover {
@@ -93,7 +95,7 @@ h2 {
 }
 
 .entry {
-    background: url('https://img.freepik.com/free-vector/gradient-geometric-shapes-dark-background_52683-33027.jpg?w=996&t=st=1671135299~exp=1671135899~hmac=b24c47e3e2a47fd8e243c4617dab33094fe445c29d0654aae91a55f044f743b2')no-repeat center center/cover;
+    background: url('/images/bg.jpg')no-repeat center center/cover;
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
