--- a/templates/eventredirect.ejs
+++ b/templates/eventredirect.ejs
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/images/Picture.png">
+    <link rel="icon" href="/images/Picture1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nirmaan-Club||<%=name%>
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600&display=swap"
+        rel="stylesheet">
     <!-- linking main styling file -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -19,6 +23,26 @@
     body {
         background: url('<%=eventdata.image%>') no-repeat center center/cover;
         background-attachment: fixed;
+    }
+
+    *,
+    body {
+        font-family: 'Source Serif Pro', serif;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: white;
+    }
+
+    .colr {
+        width: 80%;
+        margin: auto;
+        text-align: left
     }
 </style>
 
