--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -75,11 +75,11 @@ h2 {
     transition: all 0.5s;
 } */
 
-@media only screen and (max-width:500px) {
+/* @media only screen and (max-width:500px) {
     .imageon img {
         height: unset !important;
     }
-}
+} */
 
 .entry {
     background: url('/images/bg.jpg')no-repeat center center/cover;
