--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,8 +45,8 @@ h5,
 .h3,
 .h4,
 .h5 {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  color: #fff;
+  font-family: 'Source Serif Pro', serif;
+  color: black
 }
 
 .border-2 {
