--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -2,18 +2,26 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/images/Picture.png">
+    <link rel="icon" href="/images/Picture1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirmaan-Club||Events</title>
+    <title>Nirmaan-Club||Activity</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600&display=swap" rel="stylesheet">
     <!-- linking main styling file -->
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/css/events.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
+<style>
+    body,*{
+        font-family: 'Source Serif Pro', serif;
+    }
+</style>
 
 <body>
     <!-- navbar section -->
@@ -23,7 +31,7 @@
     <!-- overlay for name -->
     <div class="entry">
         <div class="titled">
-            NIRMAAN EVENTS
+            NIRMAAN ACTIVITIES
         </div>
     </div>
 
