--- a/static/css/events.css
+++ b/static/css/events.css
@@ -7,26 +7,6 @@ body {
     margin: 0px auto;
     padding-bottom: 50px;
 }
-/* .about {
-    width: 40%;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    background-color: rgb(0, 0, 0, 0.4);
-    color: rgb(255, 255, 255);
-    transform: translateX(-350px);
-    opacity: 0;
-} */
-
-/* .title {
-    margin: 100px 0px 10px 0px;
-}
-
-.title h2{
-    color: rgb(255, 255, 255);
-} */
 
 .section {
     text-align: center;
@@ -73,39 +53,11 @@ body {
         position: unset !important;
     }
 
-
-    /* .about {
-        width: 75vw !important;
-        min-height: 300px !important;
-        height: auto;
-        margin: auto;
-        padding: 10px;
-        font-size: 13px;
-        background-color: rgba(0, 0, 0, 0.4) !important;
-        color: white;
-        transform: translateX(0px);
-        transform: translateY(-500px);
-        opacity: 0;
-    } */
-
-    /* .title {
-
-        margin-top: 10px !important;
-        margin-bottom: 5px !important;
-    }
-
-    .title h2{
-        color: white;
-        font-size: 1.2rem;
-    } */
-
 }
 
-
-/* body {
-    background: url('https://img.freepik.com/free-vector/network-mesh-wire-digital-technology-background_1017-27428.jpg?w=1060&t=st=1670245802~exp=1670246402~hmac=89d3db866a6363a804a8de32eab29af1de93791e3d3299c2af03cf66ffc68586') no-repeat center center/cover;
-    background-attachment: fixed;
-} */
+body,*{
+    font-family: 'Source Serif Pro', serif;
+}
 
 html ,body{
     overflow-x: hidden;
