--- a/static/css/eventsredirect.css
+++ b/static/css/eventsredirect.css
@@ -9,6 +9,31 @@
     align-items: center;
 }
 
+body {
+    background: url('<%=eventdata.image%>') no-repeat center center/cover;
+    background-attachment: fixed;
+}
+
+*,
+body {
+    font-family: 'Source Serif Pro', serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: white;
+}
+
+.colr {
+    width: 80%;
+    margin: auto;
+    text-align: left
+}
+
 .titled {
     width: 100%;
     text-align: center;
@@ -42,10 +67,6 @@ hr {
     width: 100%;
     font-size: 1.2rem;
 }
-
-/* .colr {
-    padding: 10px 250px;
-} */
 
 .winner {
     display: flex;
