--- a/static/css/index.css
+++ b/static/css/index.css
@@ -119,7 +119,7 @@ h1,h2,h3,h4,h5{
 
 @media screen and (max-width:600px){
     .title h1{
-        font-size:4rem !important;
+        font-size:4.8rem !important;
     }
     #info p {
         font-size: 17px;
@@ -133,4 +133,68 @@ h1,h2,h3,h4,h5{
 
 body{
     height: auto;
+}
+
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Source Serif Pro', serif;
+}
+.conta {
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+}
+
+.mained {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.festsection {
+    box-shadow: 0px 0px 60px -18px;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imageon,
+.imageon img {
+    width: 550px;
+    height: 350px;
+}
+
+.dnone {
+    display: none;
+}
+
+.btned {
+    margin: 0px 40px;
+    font-size: 5rem;
+    color: black;
+}
+
+.infod {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+}
+
+.mainedsection {
+    min-height: 600px;
+    height: auto;
+    width: 800px;
+}
+
+@media screen and (max-width:1000px){
+
+}
+
+body,*{
+    font-family: 'Source Serif Pro', serif;
 }
