--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -9,18 +9,13 @@
     <title>Nirmaan-Club||Activity</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600&display=swap" rel="stylesheet">
     <!-- linking main styling file -->
-
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/css/events.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <style>
-    body,*{
-        font-family: 'Source Serif Pro', serif;
-    }
+    
 </style>
 
 <body>
@@ -54,7 +49,7 @@
                             <div class="boxes">
                             <a href="/eventname?eventname=<%=event%>&event=<%= events[event][i].topic%>&num=<%= i %>"
                                     >
-                                    <img src="<%= events[event][i].image %>" alt="">
+                                    <img loading="lazy" src="<%= events[event][i].image %>" alt="">
                                 </a>
                                 <span>
                                     <%= events[event][i].topic%>
