--- a/templates/eventredirect.ejs
+++ b/templates/eventredirect.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="eSee4zPkYDsPLiwNKfP6Ei-W-5RT8tN4eTjvEbJhYhY" />
     <link rel="icon" href="/images/Picture1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,10 +19,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <style>
-    
+    body {
+    background: url('<%=eventdata.image%>') no-repeat center center/cover;
+    background-attachment: fixed;
+}
 </style>
 
-<body>
+<body onload="load()">
+    <%- include("partials/preloader.ejs")%>
     <!-- adding navbar section -->
     <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
