--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,14 +6,14 @@
 .titled{
   text-align: center;
 }
-body {
+/* body {
   scroll-behavior: smooth;
   line-height: 1.7;
   color: gray;
   font-weight: 300;
   background-color: #ffffff;
   font-size: 16px;
-}
+} */
 
 ::-moz-selection {
   background: #000;
@@ -35,7 +35,7 @@ a:hover {
   text-decoration: none;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -47,7 +47,7 @@ h5,
 .h5 {
   font-family: 'Source Serif Pro', serif;
   color: black
-}
+} */
 
 .border-2 {
   border-width: 2px;
