--- a/templates/OurTeam.ejs
+++ b/templates/OurTeam.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="eSee4zPkYDsPLiwNKfP6Ei-W-5RT8tN4eTjvEbJhYhY" />
     <link rel="icon" href="/images/Picture1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +19,8 @@
     
 </style>
 
-<body>
+<body onload = "load()">
+    <%- include("partials/preloader.ejs") %>
     <!-- navbar section -->
     <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
