--- a/templates/events.ejs
+++ b/templates/events.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="eSee4zPkYDsPLiwNKfP6Ei-W-5RT8tN4eTjvEbJhYhY" />
     <link rel="icon" href="/images/Picture1.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +15,8 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<style>
-    
-</style>
-
-<body>
+<body onload = "load()">
+    <%- include("partials/preloader.ejs") %>
     <!-- navbar section -->
     <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
@@ -49,7 +47,7 @@
                             <div class="boxes">
                             <a href="/eventname?eventname=<%=event%>&event=<%= events[event][i].topic%>&num=<%= i %>"
                                     >
-                                    <img loading="lazy" src="<%= events[event][i].image %>" alt="">
+                                    <img loading="eager" src="<%= events[event][i].image %>" alt="">
                                 </a>
                                 <span>
                                     <%= events[event][i].topic%>
