--- a/templates/error.ejs
+++ b/templates/error.ejs
@@ -18,7 +18,7 @@
     <%- include("partials/preloader.ejs") %>
     <!-- adding navbar section -->
 
-    <div class="navbarposition">
+    <div class="navbarposition" id="nav">
         <%- include("partials/navbar.ejs") %>
     </div>
 
@@ -39,6 +39,6 @@
     <div class="footerposition">
         <%- include("partials/footer.ejs") %>
     </div>
-
+    <script src="/js/navbar.js"></script>
 </body>
 </html>
