--- a/templates/partials/preloader.ejs
+++ b/templates/partials/preloader.ejs
@@ -14,9 +14,9 @@
 <body>
 
     <div id="preload" style="width: 100%; background: black;">
-        <div class="center_div">
+        <div class="center_div" style="text-align: center;">
             <div class="rot"></div>
-            <h1 class="preload_h1" style="color: white;">NIRMAAN CLUB</h1>
+            <h1 class="preload_h1" style="color: white !important;">NIRMAAN CLUB</h1>
         </div>
 
 
@@ -24,7 +24,7 @@
 
     <script>
         function load() {
-            $("#preload").css("display","none").delay(3000).fadeOut("slow");
+            $("#preload").css("display","none").delay(3000);
         }
     </script>
 </body>
