--- a/static/css/events.css
+++ b/static/css/events.css
@@ -80,6 +80,8 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /* z-index: -10000; */
+    position: sticky;
 }
 
 .boxes {
@@ -156,7 +158,7 @@ hr {
     background: url('/images/bg.jpg')no-repeat center center/cover;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 102vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,7 +172,9 @@ hr {
 .navbarposition {
     background-image: linear-gradient(to left, black, white);
     width: 100%;
-    z-index: 1;
+    z-index: -1;
+    transform: translateY(50px);
+    /* position: relative; */
 }
 
 .footerposition {
