--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -72,7 +72,7 @@ body,*{
     background: url('/images/bg.jpg')no-repeat center center/cover;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 102vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,9 +86,10 @@ body,*{
 .navbarposition {
     background-image: linear-gradient(to left, black, white);
     width: 100%;
-    z-index: 1;
+    z-index: -1;
+    transform: translateY(50px);
+    /* position: relative; */
 }
-
 .footerposition {
     width: 100%;
     background-color: black;
