--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,20 +1,29 @@
 #video {
-    position: absolute;
-    z-index: -10;
+    /* position: absolute; */
+    /* z-index: -10;
     object-fit: cover;
     left: 0;
     right: 0;
-    overflow: hidden;
+    overflow: hidden; */
+    height: 102vh;
 }
 
 #video video {
     width: 100%;
     object-fit: cover;
-    height: 626px;
+    height: 102vh;
 }
 
 .title {
+    position: absolute;
+    z-index: 10;
+    object-fit: cover;
+    left: 0;
+    right: 0;
+    top : 0;
+    overflow: hidden;
     width: 100%;
+    height: 102vh;
     z-index: 1;
     text-align: center;
 
@@ -23,7 +32,7 @@
 .title h1 {
     color: rgb(255, 255, 255);
     font-size: 9rem;
-    height: 575px;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,7 +111,9 @@ h1,h2,h3,h4,h5{
 .navbarposition {
     background-image: linear-gradient(to left, black, white);
     width: 100%;
-    z-index: 1;
+    z-index: -1;
+    transform: translateY(50px);
+    /* position: relative; */
 }
 
 .footerposition {
